export getMisc() and friends

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,8 @@ export(mkCSV) # Rename this to xlsx
 
 import(ReadPDF)
 import(RJSONIO)
-import(stringi)
+#import(stringi)
+
+
+export(getLocation, getMisc, getVirus, getSpecies, getDiagTest)
+
