stringi back in again and used directly w/o require

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,7 @@ Authors: Matt Espe, Duncan Temple Lang
 Maintainer: Duncan Temple Lang <dtemplelang@ucdavis.edu>
 Imports: ReadPDF,
 	 RJSONIO,
+	 stringi
 xSuggests: ggplot2,
  	  readxl,
 	  openxlsx,	 
