--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,8 @@ import(RJSONIO)
 import(stringi)
 
 
-export(getLocation, getMisc, getVirus, getSpecies, getDiagTest)
+export(getLocation, getMisc, getVirus, getSpecies,
+       getDiagTest, getCountry)
+
+export(xml2eco)
 
