--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,8 @@ import(RJSONIO)
 import(stringi)
 
 
-export(getLocation, getMisc, getVirus, getSpecies,
+export(getLocation, getMisc, getVirus, getVirus2,
+       getSpecies,
        getDiagTest, getCountry)
 
 
