--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,8 @@ Authors: Matt Espe, Duncan Temple Lang
 Maintainer: Duncan Temple Lang <dtemplelang@ucdavis.edu>
 Imports: ReadPDF,
 	 RJSONIO,
-	 stringi
+	 stringi,
+	 partykit
 xSuggests: ggplot2,
  	  readxl,
 	  openxlsx,	 
